@@ -48,7 +48,7 @@ public class CachingForeignSourceRepositoryIT extends ForeignSourceRepositoryTes
 
     @Before
     public void setUp() {
-        m_defaultForeignSourceName = "imported:";
+        m_defaultForeignSourceName = "imported-";
         m_foreignSourceRepository.clear();
         m_foreignSourceRepository.flush();
     }
