@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<model-import xmlns="http://xmlns.opennms.org/xsd/config/model-import" date-stamp="2006-03-09T00:03:09" foreign-source="matt:">
+<model-import xmlns="http://xmlns.opennms.org/xsd/config/model-import" date-stamp="2006-03-09T00:03:09" foreign-source="matt-">
 	<node node-label="demo" foreign-id="1234">
 		<interface ip-addr="10.1.15.245" status="1" snmp-primary="P" descr="Management interface">
 			<monitored-service service-name="SNMP"/>
